Bug 94260 - ODF import loses fo:letter-spacing in style
Summary: ODF import loses fo:letter-spacing in style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-16 09:05 UTC by Andras Timar
Modified: 2016-10-28 15:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (ODT) (5.29 KB, application/vnd.oasis.opendocument.text)
2015-09-16 09:05 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-09-16 09:05:44 UTC
Created attachment 118763 [details]
bugdoc (ODT)

In input file's style.xml:

<style:style style:display-name="middle" style:family="paragraph" style:name="middle" style:parent-style-name="standard"><style:text-properties fo:letter-spacing="1px"/></style:style>

After roundtrip:

<style:style style:name="middle" style:family="paragraph" style:parent-style-name="standard"/>
Comment 1 Buovjaga 2015-09-20 15:55:07 UTC
Reproduced.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: 9ce08dcc2e32c5554ddf71b79173f8854e0568ad
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-09-17_21:43:51
Locale: en-US (fi_FI)
Comment 2 Commit Notification 2016-05-04 10:12:34 UTC
Rosemary Sebastian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9144a54a7612aa75cf58e857ddd4913f8bac6965

tdf#94260 Convert pixel to 1/100 mm

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2016-09-15 22:35:11 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 4 Cor Nouws 2016-10-28 15:08:34 UTC
testing in Version: 5.3.0.0.alpha1+
Build ID: 9c34797cc98030614b384b6ea0f233d59ae82253
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-26_03:59:14
Locale: nl-NL (nl_NL.UTF-8); Calc: group

after roundtrip:

<style:style style:name="middle" style:family="paragraph" style:parent-style-name="standard"><style:text-properties fo:letter-spacing="0.028cm"/></style:style>

px to cm and setting preserved > fixed
Comment 5 Cor Nouws 2016-10-28 15:08:47 UTC
.