tdf#94260 Convert pixel to 1/100 mm

The scaling factor 0.28 is chosen as per
https://www.w3.org/TR/2001/REC-xsl-20011015/slice5.html#pixels

Change-Id: I8dc7846699fbb2aa6e2a181a041b66d3cc33b8e5
Reviewed-on: https://gerrit.libreoffice.org/24547
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
Tested-by: Oliver Specht <oliver.specht@cib.de>